--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,18 @@ dist.jar=${dist.dir}/DavidTest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jackson-annotations-2.14.2.jar=C:\\Users\\lenovo\\Desktop\\test david\\Nouveau dossier\\jar_files\\jackson-annotations-2.14.2.jar
+file.reference.jackson-annotations-2.14.2.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\jackson-annotations-2.14.2.jar
 file.reference.jackson-core-2.14.2.jar=C:\\Users\\lenovo\\Desktop\\test david\\Nouveau dossier\\jar_files\\jackson-core-2.14.2.jar
+file.reference.jackson-core-2.14.2.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\jackson-core-2.14.2.jar
 file.reference.jackson-databind-2.14.2.jar=C:\\Users\\lenovo\\Desktop\\test david\\Nouveau dossier\\jar_files\\jackson-databind-2.14.2.jar
+file.reference.jackson-databind-2.14.2.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\jackson-databind-2.14.2.jar
 file.reference.jackson-datatype-jsr310-2.14.2.jar=C:\\Users\\lenovo\\Desktop\\test david\\jackson-datatype-jsr310-2.14.2.jar
+file.reference.jackson-datatype-jsr310-2.14.2.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\jackson-datatype-jsr310-2.14.2.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Users\\lenovo\\Desktop\\test david\\javax.persistence_2.1.0.v201304241213.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\lenovo\\Desktop\\test david\\json-simple-1.1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\lenovo\\Desktop\\test david\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\mysql-connector-java-5.1.23-bin.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C:\\Users\\lenovo\\Desktop\\test david\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 includes=**
 jar.compress=false
@@ -46,7 +52,13 @@ javac.classpath=\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jackson-annotations-2.14.2.jar-1}:\
+    ${file.reference.jackson-core-2.14.2.jar-1}:\
+    ${file.reference.jackson-databind-2.14.2.jar-1}:\
+    ${file.reference.jackson-datatype-jsr310-2.14.2.jar-1}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
