--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DavidTest
+application.vendor=lenovo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,6 +32,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/DavidTest.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jackson-annotations-2.14.2.jar=C:\\Users\\lenovo\\Desktop\\test david\\Nouveau dossier\\jar_files\\jackson-annotations-2.14.2.jar
 file.reference.jackson-annotations-2.14.2.jar-1=C:\\Users\\lenovo\\Desktop\\test david\\lib\\jackson-annotations-2.14.2.jar
@@ -66,6 +69,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -75,15 +79,16 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_5.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${libs.junit_5.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -92,6 +97,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=DavidTest
 main.class=davidtest.DavidTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -110,7 +117,8 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 run.test.modulepath=\
-    ${javac.test.modulepath}
+    ${javac.test.modulepath}:\
+    ${libs.junit_5.classpath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
